@@ -1087,3 +1087,4 @@ The following functions accept any form a path. The INI and language INI functio
             Fixed: OSDDrawList() limited the width of the name even without value arrows and a value itself
             Fixed: OSDDrawScrollBar() didn't take into account the different number of lines of the two OSDMenuDisplayModes
             Added: OSDMenuItemModifyNameColor() to change the color of the name separately from the color of the item line
+            Added: OSDMenuItemModifyValueLeftArrowGap() to be able to control the distance between name and value
